--- a/src/NewTodo.css
+++ b/src/NewTodo.css
@@ -53,11 +53,6 @@ div {
     margin-left: auto;
     margin-right: auto;
 }
-#first {
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
-}
 
 input[type=text] {
     color: white;
@@ -69,6 +64,10 @@ input[type=text] {
     margin-right: auto;
     width: 400px;
     height: 36px;
+}
+form {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 input[type=checkbox] {
