--- a/src/Todo.css
+++ b/src/Todo.css
@@ -1,32 +1,3 @@
-body {
-    background-color: #2D424D;
-    color: white;
-    font-family: 'SF Pro';
-}
-
-.container {
-    position: relative;
-    top: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-
-#add-button {
-    transform: scale(0.6);
-}
-
-h2 {
-    font-family: 'Crenzo';
-}
-
-h1 {
-    font-family: 'Crenzo';
-    text-align: center;
-    position: relative;
-    top: 40px;
-}
-
 
 #todo-text {
      width: 600px;
